with telephone and chat at the bottom version

--- a/Zara Website 1/css/style1.css
+++ b/Zara Website 1/css/style1.css
@@ -1,10 +1,10 @@
+/*This is the styling for Beauty Landing Page since the formating is quite different from the other pages*/
 
 /*Poppins font*/
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
 /*Monserrat font*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 
 /*Style to ALL */
 *
@@ -14,7 +14,6 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
-
 
 /*Header Styling*/
 header{
@@ -36,30 +35,7 @@ header{
   height: 3em;
 }
 
-/**/
-.nav ul{
-    list-style-type: none;
-    display: flex;
-}
-
-.nav a {
-  color: #fff;
-  text-decoration: none;
-  font-size: em;
-}
-
-
-
-.nav a:hover{
-    color: goldenrod;
-}
-
-
-.nav li{
-  margin: 10px 0 20px 20px;
-  flex-direction: column-reverse;
-}
-
+/*Styling for opening and closing sidebar*/
 .toggle
 {
   position: relative;
@@ -71,6 +47,7 @@ header{
   background-position: center;
   cursor: pointer;
 }
+
 .toggle.active
 {
   background: url(https://i.ibb.co/rt3HybH/close.png);
@@ -79,6 +56,8 @@ header{
   background-position: center;
   cursor: pointer;  
 }
+
+/*Styling for main items on page*/
 .showcase
 {
   position: absolute;
@@ -93,11 +72,14 @@ header{
   transition: 0.5s;
   z-index: 2;
 }
+
+/*Shifts the all content to the right when sidebar is open*/
 .showcase.active
 {
   right: 300px;
 }
 
+/*Sets video position and style*/
 .showcase video
 {
   position: absolute;
@@ -108,21 +90,82 @@ header{
   object-fit: cover;
   opacity: 0.6;
 }
-.overlay
+
+/*styling for container with all social media icons*/
+.social
+{
+  position: absolute;
+  z-index: 10;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*Styling for each individual icon*/
+.social li
+{
+  list-style: none;
+}
+
+/*Animation when you click on icons*/
+.social li a
+{
+  display: inline-block;
+  margin-right: 20px;
+  filter: invert(1);
+  transform: scale(0.5);
+  transition: 0.5s;
+}
+
+.social li a:hover
+{
+  transform: scale(0.5) translateY(-15px);
+}
+
+/*Sidebar Stlying*/
+.menu
 {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  right: 0;
+  width: 300px;
   height: 100%;
- 
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.text
+
+/**/
+.menu ul{
+  position: relative;
+}
+
+/*Gets rid of bullet points*/
+.menu ul li{
+  list-style: none;
+}
+
+/*text formating in sidebar when mouse is NOT hovering*/
+.menu ul li a{
+  text-decoration: none;
+  font-size: 24px;
+  color: #111;
+}
+
+/*chamges colour when mouse hovers over sidebar items*/
+.menu ul li a:hover
 {
+  color: goldenrod; 
+}
+
+/*font style*/
+.text{
   position: relative;
   z-index: 10;
 }
 
+/*h2 style*/
 .text h2
 {
   font-size: 5em;
@@ -131,22 +174,26 @@ header{
   line-height: 1em;
   text-transform: uppercase;
 }
-.text h3
-{
+
+/*h3 style*/
+.text h3{
   font-size: 4em;
   font-weight: 700;
   color: #fff;
   line-height: 1em;
   text-transform: uppercase;
 }
-.text p
-{
+
+/*paragraph style*/
+.text p{
   font-size: 1.1em;
   color: #fff;
   margin: 20px 0;
   font-weight: 400;
   max-width: 700px;
 }
+
+/*formating for links*/
 .text a
 {
   display: inline-block;
@@ -161,72 +208,14 @@ header{
   letter-spacing: 2px;
   transition: 0.2s;
 }
+
+/*Spareds out "Explore" text when mouse is on it*/
 .text a:hover
 {
   letter-spacing: 6px;
 }
 
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 30px;
-}
-.social
-{
-  position: absolute;
-  z-index: 10;
-  bottom: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.social li
-{
-  list-style: none;
-}
-.social li a
-{
-  display: inline-block;
-  margin-right: 20px;
-  filter: invert(1);
-  transform: scale(0.5);
-  transition: 0.5s;
-}
-.social li a:hover
-{
-  transform: scale(0.5) translateY(-15px);
-}
-
-.menu
-{
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 300px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.menu ul
-{
-  position: relative;
-}
-.menu ul li
-{
-  list-style: none;
-}
-.menu ul li a
-{
-  text-decoration: none;
-  font-size: 24px;
-  color: #111;
-}
-.menu ul li a:hover
-{
-  color: goldenrod; 
-}
-
+/*Media query*/
 @media (max-width: 798px)
 {
   .showcase,
@@ -234,10 +223,12 @@ header{
   {
     padding: 40px;
   }
+
   .text h2
   {
     font-size: 3em;
   }
+
   .text h3
   {
     font-size: 2em;
@@ -246,8 +237,6 @@ header{
   .text{
     align-items: center;
   }
-
-  
 }
 
 
