--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -245,6 +245,7 @@ Text in showcase styling*/
 }
 
 /*adds padding to top of showcase title*/
+#banner h1,
 #showcase h1{
     padding-top:100px;
     padding-bottom: 0px;  
@@ -277,116 +278,78 @@ Text in showcase styling*/
   opacity: 0.25;
   }
   
+/*PHOTOGRID*/
+/*for women and beauty pages*/
 
-/*same as showcase*/
-#banner h1{
-  padding-top:100px;
-  padding-bottom: 0px;  
-}
-
-
-
-/*Section A*/ 
-#section-a{
-    background: #eaeaea; 
-    color: #333; 
-    /* padding-bottom: 2em;  */
-}
-
-/*section B*/
-#section-b, #section-j{
+/*Photogrid style*/
+#photogrid{
     z-index: 1000;
     padding: 2em 1em 1em;
     background: white;
 }
 
-#section-b ul, #section-j li, ul{
-    list-style: none; /*gets rids of bullets*/
+/*removing bullet poiints + other style
+each box = li
+each row = ul*/
+#photogrid li, ul{
+    list-style: none; 
     margin:0; 
     padding:0;
-
 }
 
-#section-j li, #section-b li{
+/*Style for each box*/
+#photogrid li{
     margin-bottom: 1em; 
     color: #333;
-    /* background: white
-    ;  */
     padding: 1em;
 }
 
+/*Style on image in each box*/
 .card{
-  filter:/* Reddish shadow with 1rem blur */
-  drop-shadow(.3rem .3rem 0.5rem rgb(206, 206, 206))
-  
+  filter: drop-shadow(.3rem .3rem 0.5rem rgb(206, 206, 206))
 }
 
+/*Text group in box styling*/
 .card-content{
     padding: 0.2em;
-    font-size: 0.9em; 
-    
+    font-size: 0.9em;
 }
 .card-title{
   font-weight: none;
 }
 
+/*TEXT-HEADER
+header for womens and beauty page with just text (no img)*/ 
 
-/*boxes on contact page*/
-
-#contact-boxes{
-  background-color: whitesmoke;
-  padding: 2em 1em 1em; 
-}
-
-#contact-boxes ul{
-  list-style: none; /*gets rids of bullets*/
-  margin:0; 
-  padding:0;
-}
-
-#contact-boxes li{
-  margin-bottom: 1em; background: white;
-  color: #333;
-}
-
-#contact-boxes .card-content{
-  padding: 1.5em; 
-}
-
-
-/*section C*/ 
-
-#section-c{
+/*header styling*/
+#text-header{
     background: whitesmoke;
     color: #333; 
     padding: 1.5em;
 }
 
-#section-c h2{
+/*header h2 style*/
+#text-header h2{
   padding: 0%;
 }
 
-#section-c p{
+/*header h3 style*/
+#text-header p{
   font-family: 'Montserrat', sans-serif;
 }
 
-/*Section d / Boxes*/
-#section-d .box{
+/*TWO COL: *two image showcase on home page*/
+/*style for each box*/
+#two-col .box{
   color: white; 
   background-color: white;
-
   position: relative;
   text-align: center;
   color: white;
   z-index: -2;
 }
 
-#section-z{
-  display: flex; 
-  justify-content: space-between;
-  
-}
-
+/*centers elements*/
 .centered {
   position: absolute;
   top: 50%;
@@ -396,6 +359,9 @@ Text in showcase styling*/
   z-index: 1000;
 }
 
+/*BOX STYLING*/
+
+/*links in box style*/
 .box a {
   color: white;
   text-decoration: none;
@@ -404,11 +370,13 @@ Text in showcase styling*/
   font-weight: bold;
 }
 
+/*changes colour on hover*/
 .box a:hover{
   color: goldenrod;
 
 }
 
+/*class when text spans whole width*/
 .content-wide{
   padding: 1em;
   text-align: center;
@@ -420,11 +388,6 @@ Text in showcase styling*/
     background: black; 
     color: whitesmoke;
     text-align: center; 
-
-}
-
-p.social{
-  padding: 0px;
 }
 
 /* form formating */
@@ -438,21 +401,17 @@ p.social{
   text-transform: uppercase;
 }
 
-
 /* Style inputs with type="text", select elements and textareas */
 #form-container input[type=text], select, textarea {
   font-family: 'Montserrat', sans-serif;
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  /* margin-bottom: 16px; */ /* Bottom margin */
+  width: 100%;
+  padding: 12px; 
+  border: 1px solid #ccc;
+  border-radius: 4px; 
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 13px; 
   resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-}
-#name{
-  padding: 0px;
 }
 
 
@@ -471,20 +430,16 @@ p.social{
   background-color: #7D6608;
 }
 
+/*FOOTER*/
 
-
-/*change url color and remove underline*/
+/*footer style*/
 #main-footer{
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     text-transform: uppercase;
 }
 
-#main-footer a{
-    color: #2690d4; 
-    text-decoration: none; 
-}
-
+/*footer subscription form style*/
 #main-footer input[type=text] {
     font-family: 'Montserrat', sans-serif;
   
@@ -500,151 +455,156 @@ p.social{
     width: 18em;
   }
 
-  p.copyright{
+p.copyright{
     padding-top: 3em;
-  }
-
-
-/*social media icons*/
-
-  .social ul{
-  padding: 0.5em;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
+
+/*SOCIAL MEDIA ICONS*/
+
+/*remove padding*/
+p.social{
+    padding: 0px;
+  }
+
+/*styling unordered list with icons in it*/
+.social ul{
+    padding: 0.5em;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*styling container of each social media icon*/
 .social li{
-  list-style: none;
+    list-style: none;
 }
 
+/*style for social medai icons links*/
 .social li a{
-  display: inline-block;
-  margin-left: 30px;
-  margin-right: 20px;
-  filter: invert(1);
-  transform: scale(0.5);
-  transition: 0.5s;
+    display: inline-block;
+    margin-left: 30px;
+    margin-right: 20px;
+    filter: invert(1);
+    transform: scale(0.5);
+    transition: 0.5s;
 }
 
+/*Style when hover on soocial media icons*/
 .social li a:hover{
-  transform: scale(0.5) translateY(-15px);
+     transform: scale(0.5) translateY(-15px);
 }
 
 
-.content.active
-{
-  right: 300px;
-}
+/*Media Query for Responsive NavBar*/ 
+ @media screen and (max-width: 700px) {
+     /*hide everything in navbar except Zara logo (zara logo = first child)*/
+    .topnav a:not(:first-child) {
+        display: none;
+    }
 
+    /*hamburger menu*/
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
 
+    /*RESPONSIVE "mode"
+    (when navbar collapsed in hamburger menu)*/
+    .topnav.responsive {
+        position: relative;
+    }
 
-/*Media Query*/ 
+    /*hamburger menu style */
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
 
- @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+    /*display all navbar links inline in responsive mode*/
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 
-  .topnav.responsive a:first-child {
-  
-    display: none;
-  }
+    /*Hide Zara logo in menu*/
+    .topnav.responsive a:first-child {
+        display: none;
+    }
 
+    /*Hide search icon in menu*/
+    .topnav.responsive a:nth-child(3) {
+        display: none;
+    }
 
-  .topnav.responsive a:nth-child(3) {
-    display: none;
-  }
+    /*Show text version of Home in menu*/
+    .topnav.responsive a:nth-child(2){
+        display: block;
+        text-align: left;
+    }
 
-
-  .topnav.responsive a:nth-child(2){
-    display: block;
-    text-align: left;
-
-  }
-
-  .topnav.responsive a:nth-child(8){
-    display: block;
-    text-align: left;
-
-  }
+    /*Show text version of Search in menu*/
+    .topnav.responsive a:nth-child(8){
+        display: block;
+        text-align: left;
+    }
 } 
 
 
 /*styles put in here are only going to be in affect IF the width is greater than 700px*/
-
  @media(min-width: 700px){
+     /*Grid setup*/
     .grid {
         display:grid;
         grid-template-columns: 1fr repeat(2, minmax(auto, 25em )) 1fr;
     }
-  
-    #contact-boxes ul{
-      grid-column:  1/5; 
-   }
-  
+    
+    /*contact page form make to be in middle columns*/
    #form-container form{
-      grid-column: 2/4;
+        grid-column: 2/4;
     }
     
-   #section-d .box:first-child{
-    padding-left: 1em;
-    padding-right: 0.4em;
-   
+    /*style for first box in two-col*/
+   #two-col .box:first-child{
+        padding-left: 1em;
+        padding-right: 0.4em;
    }
   
-   #section-d .box, 
-   #contact-split .box{
-    padding-right: 1em;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    padding-left: 0.4em;
+   /*style for boxes in two-col*/
+   #two-col .box{
+        padding-right: 1em;
+        padding-top: 1em;
+        padding-bottom: 1em;
+        padding-left: 0.4em;
    }
-  
    
-    .content-wrap, 
-    #section-b ul{
-        grid-column: 1/5; 
-    }
-  
-    #section-b ul, #section-j ul, #contact-boxes ul{
+   /*set up flexbox*/
+    #photogrid ul{
         display: flex;
         justify-content: space-around; 
     }
-  
-    #section-j li, #section-b li, #contact-boxes li{
+    
+    /*Set width of li elements*/
+    #photogrid li{
         width: 31%; 
     }
-  
-    #section-j ul, .content-wide{
-      grid-column: 1/5; 
-  }
-
-     
-  .box, #main-footer div{
-        grid-column: span 2; 
-  }
-  
-  p.copyright{
-      padding: 0px;
-  }
     
+    /*change grid column to be wide*/
+    #photogrid ul, .content-wide, .content-wrap{
+        grid-column: 1/5; 
+    }
 
-
-
+     /*split to 2 columns*/
+    .box, #main-footer div{
+        grid-column: span 2; 
+    }
+    
+    /*remove padding from copyright in footer*/
+    p.copyright{
+      padding: 0px;
+    }
 }
  
